# KDE-Tasks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  TasksPageStandalone.qml  cmake_install.cmake  debug.qml  ecm_uninstall.cmake  install_manifest.txt  prefix.sh  standalone.qml
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
package/: metadata.json
package/contents/ui/: TasksPage.qml  main.qml
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  networkmanager.cpp  networkmanager.h  taskmodel.cpp  taskmodel.h  taskplugin.cpp  taskplugin.h  taskscontroller.cpp  taskscontroller.h
src/.qt/: kdetasksplugin_qml.cmake  kdetasksplugin_res.cmake
src/.qt/rcc/: qmake_org_greenmarioh_kdetasks.qrc  qrc_qmake_org_greenmarioh_kdetasks.cpp
src/.rcc/qmllint/: kdetasksplugin.rsp  kdetasksplugin_json.rsp  kdetasksplugin_module.rsp
src/kdetasksplugin_autogen/: deps  mocs_compilation.cpp
src/kdetasksplugin_autogen/EWIEGA46WW/: moc_networkmanager.cpp  moc_networkmanager.cpp.d  moc_taskmodel.cpp  moc_taskmodel.cpp.d  moc_taskmodel.cpp.json  moc_taskplugin.cpp  moc_taskplugin.cpp.d  moc_taskplugin.cpp.json  moc_taskscontroller.cpp  moc_taskscontroller.cpp.d
src/meta_types/: kdetasksplugin_json_file_list.txt  kdetasksplugin_json_file_list.txt.timestamp  qt6kdetasksplugin_metatypes.json
src/qmltypes/: kdetasksplugin_foreign_types.txt
